Fix crash when undoing liquify

BUG:498696

Test Plan
---------

1. Open document
2. Do a liquify stroke
3. While doing another liquify stroke, press undo
4. No crash